--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -10,7 +10,9 @@
   .sidebar-container {
     transition: width 0.28s;
     width: $sideBarWidth !important;
+    // background-color: $menuBg;
     background-color: $menuBg;
+
     height: 100%;
     position: fixed;
     font-size: 0px;
@@ -83,8 +85,9 @@
     & .nest-menu .el-submenu>.el-submenu__title,
     & .el-submenu .el-menu-item {
       min-width: $sideBarWidth !important;
+      
       background-color: $subMenuBg !important;
-
+      
       &:hover {
         background-color: $subMenuHover !important;
       }
