修改菜单栏 折叠后 弹出框 样式

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -212,7 +212,7 @@
   >.el-menu--popup {
     max-height: 100vh;
     overflow-y: auto;
-
+    background-color: #7cc4fa !important;
     &::-webkit-scrollbar-track-piece {
       background: #d3dce6;
     }
