--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,8 +9,8 @@ $yellow:#FEC171;
 $panGreen: #30B08F;
 
 // sidebar
-$menuText:#333;
-$menuActiveText:#fff;
+$menuText:#fff;
+$menuActiveText:#000;
 $subMenuActiveText:#f4f4f5; // https://github.com/ElemeFE/element/issues/12951
 
 // $menuBg:rgba(255,255,0, 0);
