添加分页/按钮全局样式

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -196,3 +196,7 @@ aside {
   background-color: rgb(240, 242, 245);
   position: relative;
 }
+.pagRight {
+  display: flex;
+  flex-direction: row-reverse;
+}
