--- a/src/views/test/01.html
+++ b/src/views/test/01.html
@@ -6,6 +6,10 @@
   <title>Document</title>
 </head>
 <body>
-  <textarea name="" id="" cols="30" rows="10" disabled></textarea>
+  <form method="post" enctype="multipart/form-data" action="/single">
+    <input type="file" name="avatar"><hr>
+    <input type="submit" value="上传">
+ </form>
+
 </body>
 </html>
